# soromarket

./: .gitignore  Cargo.toml  README.md  SPEC.md  app.js  contract-addresses.json  deploy.sh  index.html  style.css
.claude/: settings.local.json
contracts/: Cargo.toml
contracts/.claude/: settings.local.json
contracts/soromarket/: Cargo.toml
contracts/soromarket/src/: lib.rs  test.rs
contracts/soromarket/test_snapshots/test/: multiple_bettors_correct_payouts.1.json  test_bet_after_settle_panics.1.json  test_bet_and_totals.1.json  test_claim_before_settle_noop.1.json  test_claim_winners_and_payouts.1.json  test_double_bet_panics.1.json  test_double_claim_panics.1.json  test_negative_bet_panics.1.json  test_setup_stores_values.1.json  test_unauthorized_settle_panics.1.json
contracts/src/: lib.rs  test.rs
contracts/test_snapshots/test/: test_create_market_and_bet.1.json  test_deposit_withdraw.1.json  test_liquidity_provision.1.json  test_settlement.1.json
contracts/usdc/: Cargo.toml
contracts/usdc/src/: lib.rs
docs/: CNAME  admin.html  app.js  index.html  style.css
